--- a/repository-downloads/weather.ozweather/changelog.txt
+++ b/repository-downloads/weather.ozweather/changelog.txt
@@ -1,5 +1,5 @@
-v0.1.1
-- Moved to Google Code
+v0.1.9
+- First version with new radar support & 7 day forecasts
 
 v0.1
 - Fixed bugs - Windy with showers has an icon, and fire dangers is rading better.
