--- a/repository-downloads/skin.confluence.bossanova808/changelog.txt
+++ b/repository-downloads/skin.confluence.bossanova808/changelog.txt
@@ -1,3 +1,15 @@
+[B]0.0.6[/B]
+
+Based on Confluence 2.1.0
+- Tweaks and topography in radar
+
+
+[B]0.0.4[/B]
+
+Based on Confluence 2.1.0
+- Added OzWeather support for radars
+- Weather fan art on home screen
+
 [B]0.0.3[/B]
 
 Based on Confluence 2.1.0
