Better updates - images now done before properties...

--- a/repository-downloads/weather.ozweather/changelog.txt
+++ b/repository-downloads/weather.ozweather/changelog.txt
@@ -1,3 +1,7 @@
+V 0.2.6
+- Do images before properties so updates look better visually
+- Improved DialogSeekBar.xml - if you want radar/weather when live video is paused...
+
 V 0.2.5
 - Added DialogSeekBar.xml - if you want radar/weather when live video is paused...
 
