Make more robust if weatherzone is down, and add recently added music to home page

--- a/repository-downloads/weather.ozweather/changelog.txt
+++ b/repository-downloads/weather.ozweather/changelog.txt
@@ -1,3 +1,6 @@
+V 0.2.7
+- Don't crash if weatherzone has missing data, exit with an error to screen
+
 V 0.2.6
 - Do images before properties so updates look better visually
 - Improved DialogSeekBar.xml - if you want radar/weather when live video is paused...
