--- a/staging/skin.confluence.bossanova808/changelog.txt
+++ b/staging/skin.confluence.bossanova808/changelog.txt
@@ -1,3 +1,8 @@
+[B]0.1.3[/B]
+
+Based on Confluence 2.1.0
+- Proper system for 7 day icons now that my xbmc mainline patch is in the beta2 release 
+
 [B]0.1.2[/B]
 
 Based on Confluence 2.1.0
