--- a/repository-downloads/skin.confluence.bossanova808/changelog.txt
+++ b/repository-downloads/skin.confluence.bossanova808/changelog.txt
@@ -1,3 +1,7 @@
+[B]0.1.6[/B]
+
+- Matches OzWeather 0.3.3, and removed radar from DialogSeekBar as it doesn't update properly
+
 [B]0.1.4[/B]
 
 Based on Confluence 2.1.0 PVR Eden Beta2
