--- a/repository-downloads/script.xsqueeze/changelog.txt
+++ b/repository-downloads/script.xsqueeze/changelog.txt
@@ -1,3 +1,7 @@
+V0.2
+- Local playback now comes with the add on - i.e. Squeezeslave binaries, and control of these are now integrated into the add on
+- (Confluence) skin file much prettier
+
 v0.0.9
 - uses doModal and threading
 - now completely skinnable with all data going into $INFO 
