--- a/staging/script.xsqueeze/resources/language/English/strings.xml
+++ b/staging/script.xsqueeze/resources/language/English/strings.xml
@@ -1,5 +1,46 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
+
+  <!-- For the add on itself -->
+
 	<string id="19600">IP Address</string>
+	<string id="19601">Select Your LMS Server</string>
+	<string id="19602">No LMS Servers Found!  Check log or squeezeslave -I output manually</string>
+	<string id="19603">Select your audio output</string>
+	<string id="19604">No Audio Outputs Found! Check Log or squeezeslave -L output manually</string>
+	<string id="19605">MODE ERROR: Fix your Settings!</string>
+	<string id="19606">(Local playback AND controller only are both ON!)</string>
+	<string id="19607">(Local playback AND controller only are both OFF!)</string>
+	<string id="19608">Starting Local Squeezeslave Player</string>
+	<string id="19609">Please wait a moment...</string>
+	<string id="19610">Couldn't start local Squeezeslave</string>
+	<string id="19611">On OE/Linux/OSX did you chmod +x the binaries?</string>
+	<string id="19612">Stopping Local Squeezeslave Player</string>
+ 	<string id="19613">Couldn't connect to server!</string>
+ 	<string id="19614">Check your server settings</string>
+ 	<string id="19615">Couldn't connect to player!</string>
+ 	<string id="19616">Check you player settings</string>
+ 	<string id="19617">Error determing OS type</string>
+ 	<string id="19618">Squeezeslave probably won't work...</string>
+
+  <!-- For the settings -->
+
+	<string id="19900">LMS Server</string>
+	<string id="19901">Discover your LMS server...</string>
+	<string id="19902">Manually specify server (e.g. if you have changed default ports)</string>
+	<string id="19903">Server IP or hostname</string>
+	<string id="19904">Server CLI Port (9090 unless you have changed it)</string>
+	<string id="19905">Server HTTP Port (9000 unless you have changed it)</string>
+	<string id="19906">Act as a SqueezePlayer?</string>
+	<string id="19907">Local Player MAC</string>
+	<string id="19908">Extra SqueezeSlave arguments</string>
+	<string id="19909">Enable this if you want to manually choose an audio output</string>
+	<string id="19910">Choose an audio output here (only if no sound/special needs)...</string>
+	<string id="19911">Use as controller for external Squeezebox only?</string>
+	<string id="19912">Enter player MAC (See LMS Settings->Infomation)</string>
+	<string id="19913">Skin file to use</string>
+	<string id="19914">Disable screensaver while playing?</string>
+	<string id="19915">(NB - Can cause XSqueeze to hang on exit)</string>
+
 </strings>
 
