Updates before OzWeather 0.3.5 and XSqueeze 0.2.9

--- a/repository-downloads/weather.ozweather/changelog.txt
+++ b/repository-downloads/weather.ozweather/changelog.txt
@@ -1,3 +1,6 @@
+V 0.3.5
+- New icon, little cleanup
+
 V 0.3.4
 
 - Fixes for ParseDom 0.9.1, and removed radar from DialogSeekBar as jmarshall confirms it won't re-read the images in the path
