Before 0.3.1 release of XSqueeze

--- a/staging/script.xsqueeze/resources/language/English/strings.xml
+++ b/staging/script.xsqueeze/resources/language/English/strings.xml
@@ -13,8 +13,8 @@
 	<string id="19607">(Local playback AND controller only are both OFF!)</string>
 	<string id="19608">Starting Local Squeezeslave Player</string>
 	<string id="19609">Please wait a moment...</string>
-	<string id="19610">Couldn't start local Squeezeslave</string>
-	<string id="19611">On OE/Linux/OSX did you chmod +x the binaries?</string>
+	<string id="19610">Failed to create Squeezeslave porcess</string>
+	<string id="19611">On OE/Linux/OSX you probably need to manually chmod +x the binaries</string>
 	<string id="19612">Stopping Local Squeezeslave Player</string>
  	<string id="19613">Couldn't connect to server!</string>
  	<string id="19614">Check your server settings</string>
