--- a/staging/weather.ozweather/changelog.txt
+++ b/staging/weather.ozweather/changelog.txt
@@ -1,3 +1,6 @@
+V0.3.6
+- Fixed locations bug with help from scotia, a tricky one as I couldn't raise the bug.... 
+
 V 0.3.5
 - New icon, little cleanup
 
