--- a/staging/script.xsqueeze/resources/language/English/strings.xml
+++ b/staging/script.xsqueeze/resources/language/English/strings.xml
@@ -44,7 +44,8 @@
 	<string id="19914">Disable screensaver while playing?</string>
 	<string id="19915">(NB - EXPERIMENTAL - Can cause XSqueeze to hang on exit)</string>
 	<string id="19916">(NB - Server discovery does not yet work on OSX)</string>
-	<string id="19917">(NB - Audio output discovery does not yet work on OSX)</string>
+	<string id="19917">(NB - Audio discovery does not yet work on OSX)</string>
+	<string id="19918">(NB - Manually input the arguments in extra arguments above)</string>
 
 </strings>
 
