--- a/staging/script.xsqueeze/resources/language/English/strings.xml
+++ b/staging/script.xsqueeze/resources/language/English/strings.xml
@@ -12,10 +12,10 @@
 	<string id="19606">(Local playback AND controller only are both ON!)</string>
 	<string id="19607">(Local playback AND controller only are both OFF!)</string>
 	<string id="19608">Starting Local Squeezeslave Player</string>
-	<string id="19609">Please wait a moment...</string>
+	<string id="19609">Please wait a moment...(up to 10 seconds)...</string>
 	<string id="19610">Failed to create Squeezeslave porcess</string>
 	<string id="19611">On OE/Linux/OSX you probably need to manually chmod +x the binaries</string>
-	<string id="19612">Stopping Local Squeezeslave Player</string>
+	<string id="19612">Shutdown - Stopping Local Squeezeslave Player and Slideshow</string>
  	<string id="19613">Couldn't connect to server!</string>
  	<string id="19614">Check your server settings</string>
  	<string id="19615">Couldn't connect to player!</string>
