Trap slow exit errors, better platform detection

--- a/staging/script.xsqueeze/resources/language/English/strings.xml
+++ b/staging/script.xsqueeze/resources/language/English/strings.xml
@@ -25,6 +25,8 @@
  	<string id="19619">Empty Playlist...</string>
  	<string id="19620">Add some music to get things going...</string>
  	<string id="19621">Your first run reminder...</string>
+ 	<string id="19622">Patience...</string>
+ 	<string id="19623">(Still waiting on artist.slideshow to cleanly exit)...</string>
 
   <!-- For the settings -->
 
