--- a/repository-downloads/script.xsqueeze/changelog.txt
+++ b/repository-downloads/script.xsqueeze/changelog.txt
@@ -1,3 +1,7 @@
+V0.4.1
+- Changed system platform detection, hopefully OSX is ok now??
+- Cleaner exit handling - traps hammering of the exit button which could cause crashes
+
 V0.3.9
 - Big internal changes to reduce load on server
 - Up to 10 tracks o fplaylsit displayed
