--- a/repository-downloads/plugin.program.xsqueezechooser/changelog.txt
+++ b/repository-downloads/plugin.program.xsqueezechooser/changelog.txt
@@ -1,3 +1,6 @@
+v0.0.2
+- New chooser modes - radios, favourites, years etc. 
+
 v0.0.1
 - Initial release
 - TO Do: add choosing by years, radios, plugins if possible
