--- a/staging/script.xsqueeze/changelog.txt
+++ b/staging/script.xsqueeze/changelog.txt
@@ -1,3 +1,6 @@
+V0.5.8
+- Fixes for platform detection, made skin note about chooser smaller for Frodo compatibility.
+
 V0.5.6
 - Try to detect ARM systems, & use arm binary for squeezeslave.  Only tested with Raspbmc so far
 
