Sync skin with current nightlies

--- a/staging/skin.confluence.bossanova808.frodo/changelog.txt
+++ b/staging/skin.confluence.bossanova808.frodo/changelog.txt
@@ -1,3 +1,7 @@
+[B]0.0.4[/B]
+
+- Sync with October 3rd 2012 XBMC Nightly
+
 [B]0.0.1[/B]
 
 - First Frodo release with same features as Eden version
