Tweak to language/English/strings.xml

--- a/staging/script.xsqueeze/resources/language/English/strings.xml
+++ b/staging/script.xsqueeze/resources/language/English/strings.xml
@@ -63,7 +63,7 @@
 	<string id="19919">Server username</string>
 	<string id="19920">Server password</string>
 	<string id="19921">Resume playback immediately on startup?</string>
-	<string id="19922">Enable Touch Screen Controls? [EXPERIMENTAL!]</string>
+	<string id="19922">Enable Mouse/Touch Screen Controls?</string>
 
 </strings>
 
