Added volume display

--- a/staging/script.xsqueeze/resources/language/English/strings.xml
+++ b/staging/script.xsqueeze/resources/language/English/strings.xml
@@ -22,8 +22,8 @@
  	<string id="19616">Check you player settings</string>
  	<string id="19617">Error determing OS type</string>
  	<string id="19618">Squeezeslave probably won't work...</string>
- 	<string id="19619">Empty Playlist...</string>
- 	<string id="19620">Add some music to get things going...</string>
+ 	<string id="19619">Empty Playlist...hit i key, or info on your remote to</string>
+ 	<string id="19620">add some music and get things going...</string>
  	<string id="19621">Your first run reminder...</string>
  	<string id="19622">Patience...</string>
  	<string id="19623">(Still waiting on artist.slideshow to cleanly exit)...</string>
