--- a/staging/script.xsqueeze/resources/language/English/strings.xml
+++ b/staging/script.xsqueeze/resources/language/English/strings.xml
@@ -26,7 +26,7 @@
  	<string id="19620">Add some music and get things going...</string>
  	<string id="19621">Your first run reminder...</string>
  	<string id="19622">Patience...</string>
- 	<string id="19623">(Still waiting on artist.slideshow to cleanly exit)...</string>
+ 	<string id="19623">(Waiting on artist.slideshow exit)...</string>
  	<string id="19624">Can't find LMS Server.</string>
  	<string id="19625">Try manually configuring one in XSqueeze settings...</string>
  	<string id="19626">No server found in XSqueeze settings</string>
