--- a/staging/skin.confluence.bossanova808.frodo/changelog.txt
+++ b/staging/skin.confluence.bossanova808.frodo/changelog.txt
@@ -1,3 +1,10 @@
+[B]0.1.9[/B]
+- Fixed weather with profiles
+- Font tweaks
+
+[B]0.1.8[/B]
+- Clearart support, recently add hides watched
+
 [B]0.1.7[/B]
 - Added better title font (Roboto All Caps)
 
