--- a/staging/script.xsqueeze/changelog.txt
+++ b/staging/script.xsqueeze/changelog.txt
@@ -1,3 +1,6 @@
+V1.0.2
+- Better track details for streaming services (thanks crackers)
+
 V1.0.1
 - Updated Squeezelite to 1.2 (July 6th 2013) & Squeezeslave 1.3.390
 
