--- a/staging/script.xsqueeze/changelog.txt
+++ b/staging/script.xsqueeze/changelog.txt
@@ -1,3 +1,9 @@
+V1.0.4
+- Python API bumps for Gotham
+
+V1.0.3
+- Updated Squeezelite
+
 V1.0.2
 - Better track details for streaming services (thanks crackers)
 
