Moved lite -s switch so it's always the last switch

--- a/staging/script.xsqueeze/changelog.txt
+++ b/staging/script.xsqueeze/changelog.txt
@@ -1,3 +1,6 @@
+V1.0.9
+- Attempted bugfix for 1.0.8 squeezelite switches
+
 V1.0.8
 - Added option to pause at exit to allow xbmc audio device to resume
 - Updated Squeezelite to 1.5
